--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>Storeless Extension 1.0</title>
-    <script src="popup.js"></script>
   </head>
   <style>
     #text {
@@ -11,11 +10,13 @@
     }
     button {
       height: 30px;
-      width: 49%;
+      width: 100%;
     }
   </style>
   <body>
     <h3>Product Mapping</h3>
     <button id="btnAliMapStart">Start</button>
   </body>
+  <script src="/scripts/jquery.min.js" type="text/javascript"></script>
+  <script src="/scripts/popup.js" type="text/javascript"></script>
 </html>
